--- a/app/src/main/res/layout-land/activity_umpire.xml
+++ b/app/src/main/res/layout-land/activity_umpire.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
-    android:longClickable="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:longClickable="true">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/count_layout"
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3">
+        app:layout_constraintVertical_bias="0.25">
 
         <TextView
             android:id="@+id/balls_text"
@@ -52,9 +52,8 @@
             style="@style/Base.TextAppearance.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:text="@string/balls_button_text"
-            app:layout_constraintBottom_toTopOf="@id/strikes_button" />
+            app:layout_constraintEnd_toStartOf="@id/strikes_button" />
 
         <Button
             android:id="@+id/strikes_button"
@@ -62,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strikes_button_text"
-            app:layout_constraintTop_toTopOf="@+id/balls_button" />
+            app:layout_constraintStart_toEndOf="@+id/balls_button" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -86,4 +85,5 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
